--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
   <head> <link rel="stylesheet" href="style.css">
   </head>
- <body> 
+ <body>
+    <nav>
+       <li> <a href="index.html">Home </a></li>
+    <li> <a href="projectpage.html">Ap CSP Projects </a></li> 
+  
+    </nav>
+   
+    <br>
+   <br>
+   
  <center>
+   
+
   <h2>Kai's Website<h2>
   
   <img SRC=https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-royalty-free-image-1586966191.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200>
