--- a/projectpage.html
+++ b/projectpage.html
@@ -4,7 +4,7 @@
  <body>
     <nav>
        <li> <a href="index.html">Home </a></li>
-    <li> <a href="projectpage.html">Ap CSP Projects </a></li> 
+    <li> <a href="multiscreenapppage.html">Ap CSP Projects </a></li> 
       </nav>
 <br>
 <br>
