--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
  <body>
     <nav>
        <li> <a href="index.html">Home </a></li>
-    <li> <a href="multiscrenapppage.html">Ap CSP Projects </a></li> 
-  
+    <li> <a href="multiscrenapppage.html">Multiscreen App </a></li> 
+  <li> <a href="Datasetapppage.html">Dataset App</a></li>
     </nav>
    
     <br>
