--- a/multiscreenapppage.html
+++ b/multiscreenapppage.html
@@ -4,18 +4,16 @@
  <body>
     <nav>
        <li> <a href="index.html">Home </a></li>
-    <li> <a href="multiscreenapppage.html">Ap CSP Projects </a></li> 
+    <li> <a href="multiscreenapppage.html">Multiscreen App </a></li> 
+      <li> <a href="Datasetapppage.html"> Dataset App</a></li>
       </nav>
 <br>
 <br>
     <center>
- <h2>CSP Projects<h2>
+ <h2>Multiscreen App<h2>
  
 <iframe width="600" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/MDE51vcyCrKTBGRoSybk6I2oNnmrg3ofWhE3GJWfqvE/embed"></iframe>
   
-   <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/UIxOS2_IQ5mQrAtYV-gMx-ugI4P8Y2dWR087ETrbn3c/embed"></iframe>
-
-   <iframe width="600" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/8i6FLZj83sQK1enH1kkfp71eojOHqg17CKLLjNyxS7U/embed"></iframe>
 
    
 
