--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <body>
     <nav>
        <li> <a href="index.html">Home </a></li>
-    <li> <a href="multiscrenapppage.html">Multiscreen App </a></li> 
+    <li> <a href="multiscreenapppage.html">Multiscreen App </a></li> 
   <li> <a href="Datasetapppage.html">Dataset App</a></li>
     </nav>
    
