--- a/multiscreenapppage.html
+++ b/multiscreenapppage.html
@@ -11,8 +11,8 @@
 <br>
     <center>
  <h2>My Multiscreen App<h2>
- 
-<iframe width="600" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/MDE51vcyCrKTBGRoSybk6I2oNnmrg3ofWhE3GJWfqvE/embed"></iframe>
+ <center>
+<iframe width="390" height="550" style="border: 0px;" src="https://studio.code.org/projects/applab/MDE51vcyCrKTBGRoSybk6I2oNnmrg3ofWhE3GJWfqvE/embed"></iframe>
   
 
    
