--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <li> <a href="index.html">Home </a></li>
  <li> <a href="multiscreenapppage.html">Multiscreen App </a></li> 
  <li> <a href="Datasetapppage.html">Dataset App</a></li>
+ <li> <a href="ConditionalApppage.html"> Conditional App</a></li>
     </nav>
    
     <br>
